# shutle-semantic-search-llvm

./: .gitignore  Cargo.toml  README.md
docs-akash/guides/cli/detailed-steps/: part-5.-create-your-configuration.mdx
src/: contents.rs  errors.rs  finder.rs  llm.rs  main.rs  vector.rs
static/: index.html
test-docs/: test.md
