[package]
name = "shuttle-semantic-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
shuttle-axum = "0.19.0"
shuttle-runtime = "0.19.0"
tokio = "1.28.2"
qdrant-client = "1.2.0"
openai = "1.0.0-alpha.10"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["serde_derive"] }
uuid = "1.3.3"
axum-macros = "0.3.7"
axum-streams = { version = "0.8.2", features = ["text"] }
shuttle-static-folder = "0.19.0"
tower-http = { version = "0.4.0", features = ["fs"] }
shuttle-secrets = "0.19.0"
futures = "0.3.28"
tokio-stream = "0.1.14"
anyhow = "1.0.71"
